Allow Laravel 10–12 support

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "php": "^8.2",
+        "illuminate/support": "^10.0|^11.0|^12.0"
+    },
     "extra": {
         "laravel": {
             "providers": [
